04/task2/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-backend
spec:
  ports:
  - name: dns-tcp
    port: 9002
    protocol: TCP
    targetPort: 8080
  selector:
    app: backend
  type: ClusterIP
