04/task2/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
spec:
  ports:
  - name: nginx
    port: 9001
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend
  type: ClusterIP
