04/task2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-frontend
              port:
                number: 9001
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: service-backend
              port:
                number: 9002
